<resources>
    <string name="app_name">NMS</string>


    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>

    <string name="CM">CM</string>
    <string name="alert">告警</string>
    <string name="CMTS">CMTS</string>
    <string name="NPAInfo">NPA工单</string>
    <string name="spectrumInfo">频谱工单</string>
    <string name="timeSpectrum">实时频谱</string>
    <string name="DCT">DCT</string>
    <string name="forms">报表</string>
    <string name="UPS">UPS</string>


    <string name="query">查询</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>


    <string name="loading">加载中...</string>
    <string name="load_more">加载更多</string>
    <string name="no_more">已加载全部</string>

    <string name="no_data">暂无数据</string>
    <string name="admin">admin</string>
</resources>
