<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/main_CM"
                style="@style/main_button"
                android:background="@drawable/main_button1"
                android:text="@string/CM" />
            <Button
                android:id="@+id/main_alert"
                style="@style/main_button"
                android:background="@drawable/main_button2"
                android:text="@string/alert" />
            <Button
                android:id="@+id/main_CMTS"
                style="@style/main_button"
                android:background="@drawable/main_button3"
                android:text="@string/CMTS" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/main_NPA"
                style="@style/main_button"
                android:background="@drawable/main_button4"
                android:text="@string/NPAInfo" />
            <Button
                android:id="@+id/main_spectrum"
                style="@style/main_button"
                android:background="@drawable/main_button5"
                android:text="@string/spectrumInfo" />
            <Button
                android:id="@+id/main_timeSpectrum"
                style="@style/main_button"
                android:background="@drawable/main_button6"
                android:text="@string/timeSpectrum" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/main_DCT"
                style="@style/main_button"
                android:background="@drawable/main_button7"
                android:text="@string/DCT" />
            <Button
                android:id="@+id/main_forms"
                style="@style/main_button"
                android:background="@drawable/main_button8"
                android:text="@string/forms" />
            <Button
                android:id="@+id/main_UPS"
                style="@style/main_button"
                android:background="@drawable/main_button9"
                android:text="@string/UPS" />
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"/>

</LinearLayout>